# car_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: AllData.msg  OdoCalibration.msg  Position6d.msg  RearWheelsOdo.msg  RearWheelsPulses.msg  sbgAccelerometers.msg  sbgAccelerometersRaw.msg  sbgAttitudeAccuracy.msg  sbgBaroAltitude.msg  sbgBaroPressure.msg  sbgDeviceStatus.msg  sbgGPSAccuracy.msg  sbgGPSInfo.msg  sbgGPSNavigation.msg  sbgGPSPosition.msg  sbgGPSTrueHeading.msg  sbgGyroTemperatures.msg  sbgGyroTemperaturesRaw.msg  sbgGyroscopes.msg  sbgGyroscopesRaw.msg  sbgHeave.msg  sbgMagCalibData.msg  sbgMagnetometers.msg  sbgMagnetometersRaw.msg  sbgMatrix.msg  sbgNavAccuracy.msg  sbgOdoVelocity.msg  sbgTemperatures.msg  sbgTemperaturesRaw.msg  sbgUTCTime.msg  sbgVelocity.msg
