<package>

  <name>car_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS messages types for SENA platform</description>
  <maintainer email="jorge.pablo@gmail.com">Jorge P.M. Galdames</maintainer>
  <license>BSD</license>
  <author email="jorge.pablo@gmail.com">Jorge P.M. Galdames</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>  
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
